--- a/info.html
+++ b/info.html
@@ -1,7 +1,10 @@
----
+----
 layout: default
 title: INFO
 ---
+
+<h2>{{ page.title }}</h2>
+
 
 COI
 
@@ -9,7 +12,7 @@ This is the INFO of my blog.
 
 I was a student studying astrophysics, cosmology. I am learning Sanskrit, so as to read _Gita_.
 
-I'm a linux user. I also use a lisp-like language, _Mathematica_. I am learning SICP, via Python, the note of which taken by me is at [here](https://github.com/shuiruge/learning-sicp).
+I'm a linux user. I also use a lisp-like language, _Mathematica_. I am learning HTML/CSS/JS.
 
 I usually write blogs in Chinese, but sometimes in English.
 
