--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 title: shuiruge's Blog
 ---
 
-<h2>{{ page.title }} with <a href="info.html">info</a></h2>
+<h2>{{ page.title }}</h2>
+<h3>with <a href="info.html">info</a></h3>
+
+<hr>
 
 <p>ls -tr</p>
 
