--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: shuiruge's Blog
 <ul>
 	{% for post in site.posts %}
 
-	<li>{{ post.date | date_to_string }}
+	<li>
+	  {{ post.date | date_to_string }}
 		<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
 	</li>
 
